src/objects/Scorecard_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Team_Roles__r.Member_Name__r.FirstName</formula>
        <inlineHelpText>Name of Team Member</inlineHelpText>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Set from Team Role, but can be overridden</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Submitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scorecard__c</fullName>
        <label>Scorecard</label>
        <referenceTo>Scorecard__c</referenceTo>
        <relationshipLabel>Scorecard Submissions</relationshipLabel>
        <relationshipName>Scorecard_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent to Submitters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Roles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Roles</label>
        <referenceTo>Team_Roles__c</referenceTo>
        <relationshipLabel>Scorecard Submissions</relationshipLabel>
        <relationshipName>Scorecard_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scorecard Submission</label>
    <nameField>
        <displayFormat>SUBMS-{0000}</displayFormat>
        <label>Scorecard Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>